Add IP-Adapter support and enhance UI for logo generation
- Implemented optional IP-Adapter functionality in the Flask backend for image conditioning.
- Updated model manager to handle loading of IP-Adapter and reference images.
- Enhanced frontend with a reference image upload feature and IP-Adapter controls.
- Improved styling for better user experience and added environment variable support.
- Updated README and example environment file for Hugging Face token setup.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Virtual Environment
 venv/
 env/
