--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@
 flask>=3.0.0
 flask-cors>=4.0.0
 
+# Environment Variables
+python-dotenv>=1.0.0
+
 # Core Dependencies (Original Gradio interface)
 gradio>=4.0.0
 torch>=2.0.0
