auth added + upgrade to pro v1 + db v1

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 .env.*.local
 
 # Virtual Environment
+.venv/
 venv/
 env/
 ENV/
@@ -39,3 +40,5 @@ Thumbs.db
 
 # Gradio cache
 gradio_cached_examples/
+
+.hintrc
