--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,12 @@ pillow>=10.0.0
 numpy>=1.24.0
 huggingface-hub>=0.19.0
 
+# API Communication
+requests>=2.31.0
+
+# AI Chat Integration
+# Mistral AI - No official SDK needed, using requests
+
 # Optional: For better performance
 # xformers>=0.0.22  # Uncomment for faster attention (requires compatible GPU)
 
