--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ diffusers>=0.25.0
 transformers>=4.35.0
 accelerate>=0.25.0
 safetensors>=0.4.0
+peft>=0.7.0  # Required for LoRA support
 
 # Image Processing
 pillow>=10.0.0
