feat: Implement migration script from SQLite to PostgreSQL and add setup script
- Added `migrate_to_postgres.py` for migrating data from SQLite to PostgreSQL, including user and chat history migration.
- Created `setup.sh` for quick setup, including virtual environment creation, dependency installation, and .env file setup.
- Introduced new admin dashboard in `admin.html` for managing chat histories and user statistics.
- Developed `logo_agent.py` for processing logo requests, integrating Brave Search API for design references and generating optimized prompts.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# Hugging Face Authentication Token
+# Zypher AI Logo Generator - Environment Variables
+# Copy this file to .env and fill in your actual values
+
+# ===========================================
+# Hugging Face Configuration
+# ===========================================
 # Get your token from: https://huggingface.co/settings/tokens
 # This token is required to download gated models like Flux Schnell
 # 
@@ -10,7 +15,9 @@
 
 HUGGINGFACE_TOKEN=your_huggingface_token_here
 
-# Mistral AI API Key
+# ===========================================
+# Mistral AI Configuration
+# ===========================================
 # Get your API key from: https://console.mistral.ai/api-keys/
 # This enables the AI chat functionality
 # 
@@ -27,3 +34,64 @@ MISTRAL_API_KEY=your_mistral_api_key_here
 # Options: mistral-small-latest, mistral-medium-latest, mistral-large-latest
 # Default: mistral-large-latest (best quality)
 MISTRAL_MODEL=mistral-large-latest
+
+# ===========================================
+# Brave Search API (for Logo Reference Agent)
+# ===========================================
+# Get your API key from: https://brave.com/search/api/
+# This enables web search for logo design references
+# 
+# Steps to set up:
+# 1. Go to https://brave.com/search/api/
+# 2. Sign up for an API key (free tier: 2,000 queries/month)
+# 3. Copy the API key and paste it below
+
+BRAVE_SEARCH_API_KEY=your_brave_api_key_here
+
+# ===========================================
+# Database Configuration
+# ===========================================
+# Option 1: SQLite (default, for development)
+DATABASE_URL=sqlite:///data.db
+
+# Option 2: PostgreSQL (recommended for production)
+# Local PostgreSQL:
+# DATABASE_URL=postgresql://username:password@localhost:5432/zypher_ai
+# 
+# Cloud PostgreSQL examples:
+# Heroku: postgres://user:pass@host.compute.amazonaws.com:5432/dbname
+# AWS RDS: postgresql://user:pass@mydb.region.rds.amazonaws.com:5432/zypher_ai
+# DigitalOcean: postgresql://user:pass@host.db.ondigitalocean.com:25060/zypher_ai?sslmode=require
+
+# ===========================================
+# Firebase Configuration (Client-side)
+# ===========================================
+# Get these from Firebase Console > Project Settings > Your apps
+FIREBASE_API_KEY=your_firebase_api_key
+FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=123456789
+FIREBASE_APP_ID=1:123456789:web:abc123def456
+
+# ===========================================
+# Firebase Admin SDK (Server-side)
+# ===========================================
+# Path to your Firebase service account JSON file
+# Download from: Firebase Console > Project Settings > Service Accounts
+FIREBASE_SERVICE_ACCOUNT=./zypher-eb28f-firebase-adminsdk-fbsvc-4bcfb0a550.json
+
+# ===========================================
+# Server Configuration
+# ===========================================
+SERVER_PORT=7860
+SERVER_NAME=0.0.0.0
+
+# ===========================================
+# Notes
+# ===========================================
+# 1. Never commit your .env file to version control
+# 2. Keep your API keys secure
+# 3. For production, use environment variables instead of .env file
+# 4. See README_NEW_FEATURES.md for detailed setup instructions
+
