--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ python-dotenv>=1.0.0
 # Core Dependencies (Original Gradio interface)
 gradio>=4.0.0
 torch>=2.0.0
-diffusers>=0.25.0
+diffusers>=0.31.0  # Required for FLUX Redux support
 transformers>=4.35.0
 accelerate>=0.25.0
 safetensors>=0.4.0
